# Tactus

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  ROADMAP.md  TASKS.md  justfile  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
apps/ios/: README.md  project.yml
apps/ios/TactusApp/: AnnouncementService.swift  ContentView.swift  CoreSession.swift  EarconService.swift  MidiTransport.swift  MidiTransporting.swift  SimulatedTransport.swift  SpeechService.swift  TactusApp.swift
apps/ios/TactusAppTests/: CoreSessionTests.swift
apps/ios/TactusAppUITests/: TactusUITests.swift
core/crates/device/: Cargo.toml
core/crates/device/src/: catalogs.rs  firmware.rs  lib.rs  profile.rs  registry.rs
core/crates/device/tests/: map_crosscheck.rs  v31_profile.rs
core/crates/devicesim/: Cargo.toml
core/crates/devicesim/src/: cassette.rs  device.rs  lib.rs  state.rs  timing.rs
core/crates/e2e/: Cargo.toml
core/crates/e2e/src/: lib.rs
core/crates/e2e/tests/: cassette_replay.rs  full_session.rs  timed_scenarios.rs
core/crates/engine/: Cargo.toml
core/crates/engine/src/: event.rs  lib.rs  session.rs  viewmodel.rs
core/crates/ffi/: Cargo.toml
core/crates/ffi/src/: lib.rs  sim.rs  types.rs
core/crates/model/: Cargo.toml
core/crates/model/i18n/: en.ftl  ru.ftl
core/crates/model/src/: catalog.rs  format.rs  i18n.rs  intent.rs  lib.rs
core/crates/sysex/: Cargo.toml
core/crates/sysex/src/: address.rs  checksum.rs  encoding.rs  lib.rs  message.rs  reassembly.rs
core/crates/sysex/tests/: golden_vectors.rs
docker/: Dockerfile
docs/: ACCESSIBILITY.md  CI.md  DEVELOPMENT.md  HARDWARE_TESTING.md  PROTOCOL.md  SPEC.md  starter-brief.md
docs/adr/: 0001-replace-not-mirror.md  0002-rust-core-uniffi.md  0003-input-screen-reader-first.md  0004-vendor-docs-not-committed.md  0005-native-ui-per-platform.md  0006-nonvisual-first.md  0007-device-profile-abstraction.md  0008-sans-io-core-and-i18n.md  0009-firmware-compatibility-policy.md  0010-device-instances-and-source-of-truth.md  0011-mixed-language-speech.md  0012-scope-and-generalization-path.md  0013-data-driven-ui-renderer.md  0014-screen-reader-is-the-only-voice.md
profiles/: roland-v31.json
profiles/catalogs/roland-v31/: drum-kits.json  fx-types.json  instruments.json
profiles/maps/: roland-v31-address-map.json
scripts/: cargo-docker.sh
tools/: README.md  parse_datalist.py  parse_midi_impl.py  requirements.txt
tools/cassettes/: v31-identity.ndjson
