[package]
name = "engine"
description = "Sans-I/O session state machine: connect, poll, write-readback-verify, events."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sysex = { workspace = true }
device = { workspace = true }
model = { workspace = true }
