[package]
name = "drumcore"
description = "UniFFI public API for the shared core (lib name avoids clashing with system libffi)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
# cdylib -> Android .so; staticlib -> iOS XCFramework; lib -> tests/host use.
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
engine = { workspace = true }
