[package]
name = "tactus"
description = "Tactus core: the UniFFI public API for the shared Rust core (builds libtactus)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
# cdylib -> Android .so; staticlib -> iOS XCFramework; lib -> tests/host use.
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
engine = { workspace = true }
uniffi = "0.31"
