[package]
name = "tactus"
description = "Tactus core: the UniFFI public API for the shared Rust core (builds libtactus)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
# cdylib -> Android .so; staticlib -> iOS XCFramework; lib -> tests/host use.
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
engine = { workspace = true }
devicesim = { workspace = true, optional = true }
uniffi = "0.31"

[features]
default = []
# Debug/dev-only: expose the simulated module (devicesim::VirtualDevice) over FFI
# so the app can run the full pipeline with no hardware (device-mock plan, B1).
# MUST stay off in shipping builds — `just build-ios-release` asserts its symbols
# are absent.
simffi = ["dep:devicesim"]
