[package]
name = "model"
description = "Domain model (kit, parameters, edit intents) and localized value formatting."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sysex = { workspace = true }
device = { workspace = true }
