[package]
name = "model"
description = "Domain model (kit, parameters, edit intents) and localized value formatting."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
device = { workspace = true }
fluent = "0.16"
unic-langid = "0.9"
